CREATE TABLE IF NOT EXISTS RULE(
ID TEXT UNIQUE NOT NULL,
QUERY TEXT,
ARGUMENT01 TEXT,
ARGUMENT02 TEXT,
ARGUMENT03 TEXT,
ARGUMENT04 TEXT,
NEGATIVE BOOLEAN
);

CREATE TABLE IF NOT EXISTS RECOMMENDATION(
ID TEXT UNIQUE NOT NULL,
CONTRACT_ID TEXT,
NAME TEXT,
TEXT TEXT
);

CREATE TABLE IF NOT EXISTS RULE_TO_RECOMMENDATION(
RECOMMENDATION_ID TEXT,
RULE_ID TEXT
);