@startuml
class RecommendationsChoice{
-repository: StarRepository
-transactions: List<Transaction>
-keyWords: String[]
-logger: Logger
+{constructor} RecommendationsChoice(StarRepository repository)
+toString(): String
+getRecommendation(UUID id): Optional<Recommendations>
-toCompare(String evaluate): boolean
-toTranslate(String rule): String
-checkCondition(String evaluate1, String evaluate2, String operation): String
-toSimplify(String text): String
-toCalculate(String rule): int
+toEvaluate(String rule): boolean
}

class Recommendation {
  -id: UUID
  -name: String
  -annotation: String
  +getName(): String
}

class Recommendations {
  -user_id: UUID
  -recommendations: Recommendation[]
  +getRecommendations(): Recommendation[]
}

class Rule {
  -id: UUID
  -instruction: String
  +getInstruction(): String
}

class RuleToRecommendation {
  -recommendationId: UUID
  -ruleId: UUID
}

class RecommendationController{
-service: RecommendationService
-logger: Logger
+{constructor} RecommendationController(RecommendationService service)
+getRecommendation(UUID id): ResponseEntity<Recommendations>
}

class RecommendationRuleSet{
+getRecommendation(UUID id): Optional<Recommendations>
}

class StarRepository{
-transactionsJdbcTemplate: JdbcTemplate
-rulesJdbcTemplate: JdbcTemplate
-logger: Logger
+{constructor} StarRepository(JdbcTemplate transactionsJdbcTemplate, JdbcTemplate rulesJdbcTemplate)
+getRecommendations(): List<Recommendation>
-lambda$getAllRules$1(ResultSet arg0, int arg1): Rule
-lambda$getAmountsByTypes$0(ResultSet arg0, int arg1): Transaction
-lambda$getRecommendations$3(ResultSet arg0, int arg1): Recommendation
-lambda$getRulesById$2(ResultSet arg0, int arg1): UUID
+getAmountsByTypes(UUID id): List<Transaction>
+getAllRules(): List<Rule>
+getRulesById(UUID id): List<UUID>
}

Recommendations "1" *-- "0..*" Recommendation : contains
RuleToRecommendation --> Recommendation : links to
RuleToRecommendation --> Rule : links to

RecommendationController --> RecommendationRuleSet: getRecommendation(UUID id)
RecommendationsChoice ..|> RecommendationRuleSet
RecommendationsChoice --> StarRepository : repository
StarRepository --> Recommendations: getRecommendations()

@enduml